--- a/ITCompanyExt/ITCompanyExt.csproj
+++ b/ITCompanyExt/ITCompanyExt.csproj
@@ -49,8 +49,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\Department.cs" />
     <Compile Include="BLL\Employee.cs" />
     <Compile Include="BLL\UserAuthData.cs" />
+    <Compile Include="Controllers\DepartmentController.cs" />
     <Compile Include="Controllers\UserAuthController.cs" />
     <Compile Include="UI\AutrizationForm.cs">
       <SubType>Form</SubType>
@@ -60,6 +62,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\RegisterUserForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,6 +85,9 @@
     </Compile>
     <EmbeddedResource Include="UI\AutrizationForm.resx">
       <DependentUpon>AutrizationForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\RegisterUserForm.resx">
       <DependentUpon>RegisterUserForm.cs</DependentUpon>
